Make form helper selector heading a bit more visible and small CodeMirror styling fix

--- a/gui/src/plugins/codemirror/style.scss
+++ b/gui/src/plugins/codemirror/style.scss
@@ -6,6 +6,10 @@
     resize: vertical;
 }
 
+.CodeMirror {
+    width: 200px;
+}
+
 @include media-breakpoint-up(sm) {
     .CodeMirror {
         width: 362px;
